# TOML-Init

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml  publish.yml
example_project/: run_demo.py
example_project/configs/defaults/: example_defaults.toml
src/toml_init/: __init__.py  __main__.py  encryption_manager.py  exceptions.py  manager.py  validators.py
